# command-center

./: DATABASE_SETUP.md  README.md  VERCEL_DEPLOYMENT_GUIDE.md  build.sh  main.py  pyproject.toml  vercel.json
command-center-backend/: env.example  manage.py  requirements.txt
command-center-backend/command_center/: asgi.py  settings.py  urls.py
command-center-backend/job_automation_agent/: admin.py  models.py  views.py
command-center-backend/job_automation_agent/management/commands/: import_linkedin_jobs.py
command-center-backend/templates/admin/: index.html
command-center-backend/templates/job_automation_agent/: job_description_section.html
command_center/: settings.py  wsgi.py
docs/: unfold-code.md  unfold.md
job_automation_agent/: apps.py
job_automation_agent/migrations/: 0001_initial.py
job_automation_agent/templates/job_automation_agent/: chatbot.html
notebooks/: agents.ipynb  datacreation.ipynb  eda.ipynb  job-data-agent.ipynb  job.ipynb  langchain.ipynb
src/command_center/: settings.py
