[project]
name = "command-center"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "ipykernel>=6.29.5",
    "ipython>=9.3.0",
    "langchain-community>=0.3.25",
    "langchain[openai]>=0.3.25",
    "langgraph>=0.4.8",
]
